<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--    <TextView-->
<!--      android:layout_width="wrap_content"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:text="Hello World!"-->
<!--      app:layout_constraintBottom_toBottomOf="parent"-->
<!--      app:layout_constraintStart_toStartOf="parent"-->
<!--      app:layout_constraintEnd_toEndOf="parent"-->
<!--      app:layout_constraintTop_toTopOf="parent" />-->


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <EditText
        android:id="@+id/resultEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:id="@+id/ButtonRow01"
        android:layout_width="match_parent"
        android:layout_height="427dp"
        android:layout_weight="1"
        android:orientation="horizontal">

      <Button
          android:id="@+id/btn01"
          android:layout_width="wrap_content"
          android:layout_height="122dp"
          android:layout_weight="1"
          android:insetLeft="5dp"
          android:insetRight="5dp"
          android:onClick="btn01Click"
          android:text="@string/btn01" />

      <Button
          android:id="@+id/btn02"
          android:layout_width="wrap_content"
          android:layout_height="122dp"
          android:layout_weight="1"
          android:insetLeft="5dp"
          android:insetRight="5dp"
          android:onClick="btn02Click"
          android:text="@string/btn02" />

      <Button
          android:id="@+id/btn03"
          android:layout_width="wrap_content"
          android:layout_height="122dp"
          android:layout_weight="1"
          android:insetLeft="5dp"
          android:insetRight="5dp"
          android:onClick="btn03Click"
          android:text="@string/btn03" />

      <Button
          android:id="@+id/btnPLus"
          android:layout_width="wrap_content"
          android:layout_height="122dp"
          android:layout_weight="1"
          android:insetLeft="5dp"
          android:insetRight="5dp"
          android:onClick="btnPLus"
          android:text="@string/btnPLus" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ButtonRow02"
        android:layout_width="match_parent"
        android:layout_height="424dp"
        android:layout_weight="1"
        android:orientation="horizontal">

      <Button
          android:id="@+id/btn04"
          android:layout_width="wrap_content"
          android:layout_height="122dp"
          android:layout_weight="1"
          android:insetLeft="5dp"
          android:insetRight="5dp"
          android:onClick="btn04Click"
          android:text="@string/btn04" />

      <Button
          android:id="@+id/btn05"
          android:layout_width="wrap_content"
          android:layout_height="122dp"
          android:layout_weight="1"
          android:insetLeft="5dp"
          android:insetRight="5dp"
          android:onClick="btn05Click"
          android:text="@string/btn05" />

      <Button
          android:id="@+id/btn06"
          android:layout_width="wrap_content"
          android:layout_height="122dp"
          android:layout_weight="1"
          android:insetLeft="5dp"
          android:insetRight="5dp"
          android:onClick="btn06Click"
          android:text="@string/btn06" />

      <Button
          android:id="@+id/btnMin"
          android:layout_width="wrap_content"
          android:layout_height="122dp"
          android:layout_weight="1"
          android:insetLeft="5dp"
          android:insetRight="5dp"
          android:onClick="btnMinus"
          android:text="@string/btnMin" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ButtonRow03"
        android:layout_width="match_parent"
        android:layout_height="427dp"
        android:layout_weight="1"
        android:orientation="horizontal">

      <Button
          android:id="@+id/btn07"
          android:layout_width="wrap_content"
          android:layout_height="122dp"
          android:layout_weight="1"
          android:insetLeft="5dp"
          android:insetRight="5dp"
          android:onClick="btn07Click"
          android:text="@string/btn07" />

      <Button
          android:id="@+id/btn08"
          android:layout_width="wrap_content"
          android:layout_height="122dp"
          android:layout_weight="1"
          android:insetLeft="5dp"
          android:insetRight="5dp"
          android:onClick="btn08Click"
          android:text="@string/btn08" />

      <Button
          android:id="@+id/btn09"
          android:layout_width="wrap_content"
          android:layout_height="122dp"
          android:layout_weight="1"
          android:insetLeft="5dp"
          android:insetRight="5dp"
          android:onClick="btn09Click"
          android:text="@string/btn09" />

      <Button
          android:id="@+id/btnDiv"
          android:layout_width="wrap_content"
          android:layout_height="122dp"
          android:layout_weight="1"
          android:insetLeft="5dp"
          android:insetRight="5dp"
          android:onClick="btnDivide"
          android:text="@string/btnDiv" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ButtonRow04"
        android:layout_width="match_parent"
        android:layout_height="569dp"
        android:layout_weight="1"
        android:orientation="horizontal">

      <Button
          android:id="@+id/btnCE"
          android:layout_width="wrap_content"
          android:layout_height="122dp"
          android:layout_weight="1"
          android:insetLeft="5dp"
          android:insetRight="5dp"
          android:onClick="btnCE"
          android:text="CE" />

      <Button
          android:id="@+id/btn10"
          android:layout_width="wrap_content"
          android:layout_height="122dp"
          android:layout_weight="1"
          android:insetLeft="5dp"
          android:insetRight="5dp"
          android:onClick="btn10Click"
          android:text="@string/btn10" />

      <Button
          android:id="@+id/btnPoint"
          android:layout_width="wrap_content"
          android:layout_height="122dp"
          android:layout_weight="1"
          android:insetLeft="5dp"
          android:insetRight="5dp"
          android:onClick="btnPoint"
          android:text="." />

      <Button
          android:id="@+id/btnTimes"
          android:layout_width="wrap_content"
          android:layout_height="122dp"
          android:layout_weight="1"
          android:insetLeft="5dp"
          android:insetRight="5dp"
          android:onClick="btnTimes"
          android:text="X" />

    </LinearLayout>

    <Button
        android:id="@+id/btnEQ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetLeft="5dp"
        android:insetRight="5dp"
        android:onClick="btnEQ"
        android:text="@string/btnEQ" />

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>